[gd_scene load_steps=5 format=3 uid="uid://vtmapdr3lve8"]

[ext_resource type="Theme" uid="uid://rk6qj71lika4" path="res://assets/theme_hud.tres" id="1_ve0d0"]
[ext_resource type="Script" uid="uid://dsetgl7bk34m2" path="res://scripts/score_container.gd" id="2_ixdsg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88dsx"]
bg_color = Color(0.615076, 0.612658, 0.443193, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8k2w"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ScoreContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ve0d0")
theme_override_styles/panel = SubResource("StyleBoxFlat_88dsx")
script = ExtResource("2_ixdsg")
player_id = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayerName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Player name"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n8k2w")

[node name="Cont1" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RevealedCells" type="Label" parent="MarginContainer/VBoxContainer/Cont1"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Cells:"
horizontal_alignment = 1

[node name="RevealedCellsScore" type="Label" parent="MarginContainer/VBoxContainer/Cont1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1

[node name="Cont2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Flags" type="Label" parent="MarginContainer/VBoxContainer/Cont2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Flags:"
horizontal_alignment = 1

[node name="ValidFlagScore" type="Label" parent="MarginContainer/VBoxContainer/Cont2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "+20"

[node name="Cont3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TotalLabel" type="Label" parent="MarginContainer/VBoxContainer/Cont3"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Total:"
horizontal_alignment = 1

[node name="TotalScore" type="Label" parent="MarginContainer/VBoxContainer/Cont3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1500"
horizontal_alignment = 1
